--- a/statistics.ipynb
+++ b/statistics.ipynb
@@ -131,15 +131,19 @@
     "---------------------------------\n",
     "Warner's randomized response model is a statistical model that allows respondents to answer sensitive questions without revealing their true answers. It is used to estimate the proportion of people who have a sensitive attribute, such as drug use or criminal behavior, without asking them directly about the sensitive attribute.\n",
     "\n",
-    "Example: \n",
-    "  - Suppose we want to estimate the proportion of people who have a sensitive attribute, such as drug use or criminal behavior.\n",
-    "  - We ask each respondent to flip a coin and answer \"yes\" if the coin comes up heads, and \"no\" if the coin comes up tails.\n",
-    "  - We then use the proportion of \"yes\" answers to estimate the proportion of people who have the sensitive attribute.\n",
+    "Here's how Warner's randomized response model could be implemented:\n",
     "\n",
-    "Why flipping a coin won't effect the result?\n",
-    "  - If the coin comes up heads, the respondent answers \"yes\" with probability 1/2, and \"no\" with probability 1/2.\n",
-    "  - If the coin comes up tails, the respondent answers \"yes\" with probability 1/2, and \"no\" with probability 1/2.\n",
-    "  - The proportion of \"yes\" answers is equal to the proportion of people who have the sensitive attribute.\n"
+    " - Randomization: Each respondent is given a coin or a similar randomization device (like a spinner or a random number generator) along with the survey.\n",
+    "\n",
+    " - Instructions: The respondents are instructed to flip the coin in private. If it lands heads, they are told to answer the question honestly. If it lands tails, they are instructed to provide a predetermined, randomized response, irrespective of the truth.\n",
+    "\n",
+    " - Answering the Sensitive Question: Let's say the sensitive question is \"Have you ever cheated on an exam?\" If the respondent gets heads, they answer truthfully (Yes or No). If they get tails, they follow a predetermined protocol that ensures their response remains confidential. For instance, they might be asked to respond with \"Yes\" regardless of their actual behavior.\n",
+    "\n",
+    " - Data Collection: Researchers collect the responses, not knowing which respondents were given heads or tails. This protects the privacy of individual respondents.\n",
+    "\n",
+    " - Analysis: Using statistical techniques, researchers can estimate the proportion of people who have the sensitive attribute (cheating on exams in this case) by taking into account the randomization process. By comparing the proportion of \"Yes\" responses from both the heads and tails groups, they can estimate the true proportion of individuals engaging in the sensitive behavior.\n",
+    "\n",
+    " The key to Warner's randomized response model is that even though respondents are asked to provide a randomized response when they get tails, the proportion of truthful answers can still be estimated using statistical methods. This provides a way to gather valuable information on sensitive topics while respecting respondent privacy and minimizing social desirability bias.\n"
    ]
   },
   {
