--- a/statistics.ipynb
+++ b/statistics.ipynb
@@ -349,7 +349,13 @@
     "  - Suppose we have a large number of independent, identically distributed random variables, such as the number of heads in 10 coin flips, the number of defective items in 100 items, etc.\n",
     "  - The distribution of the sample mean of these random variables approaches a normal distribution, regardless of the shape of the original distribution.\n",
     "  - This is true regardless of the shape of the original distribution, because the sample mean is the average of the results obtained from a large number of trials, and the law of large numbers states that the average of the results obtained from a large number of trials should be close to the expected value, and will tend to become closer as more trials are performed.\n",
-    "  - The central limit theorem is used to estimate the distribution of the sample mean of a large number of independent, identically distributed random variables, and to make predictions about the population mean and standard deviation.\n",
+    "  - The central limit theorem is used to estimate the distribution of the sample mean of a large number of independent, identically distributed random variables, and to make predictions about the population mean and standard deviation.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "Corelation:\n",
     "-----------\n",
@@ -364,7 +370,53 @@
     "  - n is the number of samples.\n",
     "\n",
     "\n",
+    "Corelation doesn't imply causation: Among school children, there is high corelation between shoe size and reading ability. But it doesn't mean that reading ability increases with shoe size. It is just a corelation, not causation. with lurking factor of age\n",
+    "\n",
+    "Only for linear relationship: Correlation measures only linear relationship between two variables. It doesn't measure non-linear relationships.\n",
+    "\n",
+    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Regression:\n",
+    "-----------\n",
+    "Regression is a statistical method used to estimate the relationship between two or more variables. It is used to estimate the relationship between two or more variables, and to make predictions about the value of one variable based on the value of another variable.\n",
+    "\n",
+    "  Formulae: $\\Large{y = mx + c}$\n",
+    "\n",
+    "where:\n",
+    "  - y is the dependent variable.\n",
+    "  - x is the independent variable.\n",
+    "  - m is the slope of the line.\n",
+    "  - c is the y-intercept of the line.\n",
+    "\n",
+    "Least squares method: The least squares method is a method of estimating the relationship between two or more variables by minimizing the sum of the squares of the differences between the observed and predicted values of the dependent variable.\n",
+    "\n",
+    "  Formulae: $\\Large{m = \\frac{n \\times \\sum_{i=1}^{n} x_i \\times y_i - \\sum_{i=1}^{n} x_i \\times \\sum_{i=1}^{n} y_i}{n \\times \\sum_{i=1}^{n} x_i^2 - (\\sum_{i=1}^{n} x_i)^2}}$\n",
+    "\n",
+    "  \n",
+    "  Formulae: $\\Large{c = \\frac{\\sum_{i=1}^{n} y_i - m \\times \\sum_{i=1}^{n} x_i}{n}}$\n",
+    "\n",
+    "where:\n",
+    "  - m is the slope of the line.\n",
+    "  - c is the y-intercept of the line.\n",
+    "  - x_i and y_i are the values of the two variables.\n",
+    "  - n is the number of samples.\n",
+    "\n",
+    "\n",
+    "\n",
+    "  Regression using Mean values:\n",
+    "  -----------------------------\n",
+    "  Regression using mean values is a method of estimating the relationship between two or more variables by using the mean values of the variables. It is used to estimate the relationship between two or more variables, and to make predictions about the value of one variable based on the value of another variable.\n",
+    "\n",
+    "  Formulae: $\\Large{y = \\bar{y} + r \\times \\frac{\\sigma_y}{\\sigma_x} \\times (x - \\bar{x})}$\n",
+    "\n",
+    "  \n",
+    "  Regression fallacy: The regression fallacy is a logical fallacy that occurs when a person assumes that a regression line represents the relationship between two variables, when in fact it only represents the relationship between the mean values of the variables. It is used to estimate the relationship between two or more variables, and to make predictions about the value of one variable based on the value of another variable.\n"
    ]
   }
  ],
